--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false
-spring.datasource.username=root
+########### FOR MYSQL DATABASE ####################
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.generate-ddl=true
+#spring.jpa.show-sql=true
+#spring.messages.basename=validation
+#server.error.whitelabel.enabled=false
+########### FOR H2 DATABASE ####################
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-
-spring.messages.basename=validation
-server.error.whitelabel.enabled=false
